--- a/Legal_chatbot.ipynb
+++ b/Legal_chatbot.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPbMGgbVk4RZyGB4uEbTWo1",
+      "authorship_tag": "ABX9TyPPmTpD7Fe5uMrAp2UbS1Xj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -514,6 +514,7 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install streamlit\n",
         "!pip install pyngrok"
       ],
       "metadata": {
@@ -521,20 +522,57 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5Sho0ihTYHSh",
-        "outputId": "82011953-8a89-423f-a0cc-e74ddd0f953e"
+        "outputId": "e966f68c-04fe-4340-bfa7-5b42aabed245"
       },
-      "execution_count": 22,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting pyngrok\n",
-            "  Downloading pyngrok-7.2.3-py3-none-any.whl.metadata (8.7 kB)\n",
-            "Requirement already satisfied: PyYAML>=5.1 in /usr/local/lib/python3.11/dist-packages (from pyngrok) (6.0.2)\n",
-            "Downloading pyngrok-7.2.3-py3-none-any.whl (23 kB)\n",
-            "Installing collected packages: pyngrok\n",
-            "Successfully installed pyngrok-7.2.3\n"
+            "Requirement already satisfied: streamlit in /usr/local/lib/python3.11/dist-packages (1.42.0)\n",
+            "Requirement already satisfied: altair<6,>=4.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (5.5.0)\n",
+            "Requirement already satisfied: blinker<2,>=1.0.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (1.9.0)\n",
+            "Requirement already satisfied: cachetools<6,>=4.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (5.5.1)\n",
+            "Requirement already satisfied: click<9,>=7.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (8.1.8)\n",
+            "Requirement already satisfied: numpy<3,>=1.23 in /usr/local/lib/python3.11/dist-packages (from streamlit) (1.26.4)\n",
+            "Requirement already satisfied: packaging<25,>=20 in /usr/local/lib/python3.11/dist-packages (from streamlit) (24.2)\n",
+            "Requirement already satisfied: pandas<3,>=1.4.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (2.2.2)\n",
+            "Requirement already satisfied: pillow<12,>=7.1.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (11.1.0)\n",
+            "Requirement already satisfied: protobuf<6,>=3.20 in /usr/local/lib/python3.11/dist-packages (from streamlit) (5.29.3)\n",
+            "Requirement already satisfied: pyarrow>=7.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (17.0.0)\n",
+            "Requirement already satisfied: requests<3,>=2.27 in /usr/local/lib/python3.11/dist-packages (from streamlit) (2.32.3)\n",
+            "Requirement already satisfied: rich<14,>=10.14.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (13.9.4)\n",
+            "Requirement already satisfied: tenacity<10,>=8.1.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (9.0.0)\n",
+            "Requirement already satisfied: toml<2,>=0.10.1 in /usr/local/lib/python3.11/dist-packages (from streamlit) (0.10.2)\n",
+            "Requirement already satisfied: typing-extensions<5,>=4.4.0 in /usr/local/lib/python3.11/dist-packages (from streamlit) (4.12.2)\n",
+            "Requirement already satisfied: watchdog<7,>=2.1.5 in /usr/local/lib/python3.11/dist-packages (from streamlit) (6.0.0)\n",
+            "Requirement already satisfied: gitpython!=3.1.19,<4,>=3.0.7 in /usr/local/lib/python3.11/dist-packages (from streamlit) (3.1.44)\n",
+            "Requirement already satisfied: pydeck<1,>=0.8.0b4 in /usr/local/lib/python3.11/dist-packages (from streamlit) (0.9.1)\n",
+            "Requirement already satisfied: tornado<7,>=6.0.3 in /usr/local/lib/python3.11/dist-packages (from streamlit) (6.4.2)\n",
+            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.11/dist-packages (from altair<6,>=4.0->streamlit) (3.1.5)\n",
+            "Requirement already satisfied: jsonschema>=3.0 in /usr/local/lib/python3.11/dist-packages (from altair<6,>=4.0->streamlit) (4.23.0)\n",
+            "Requirement already satisfied: narwhals>=1.14.2 in /usr/local/lib/python3.11/dist-packages (from altair<6,>=4.0->streamlit) (1.24.1)\n",
+            "Requirement already satisfied: gitdb<5,>=4.0.1 in /usr/local/lib/python3.11/dist-packages (from gitpython!=3.1.19,<4,>=3.0.7->streamlit) (4.0.12)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas<3,>=1.4.0->streamlit) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas<3,>=1.4.0->streamlit) (2024.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas<3,>=1.4.0->streamlit) (2025.1)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests<3,>=2.27->streamlit) (3.4.1)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests<3,>=2.27->streamlit) (3.10)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests<3,>=2.27->streamlit) (2.3.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests<3,>=2.27->streamlit) (2024.12.14)\n",
+            "Requirement already satisfied: markdown-it-py>=2.2.0 in /usr/local/lib/python3.11/dist-packages (from rich<14,>=10.14.0->streamlit) (3.0.0)\n",
+            "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /usr/local/lib/python3.11/dist-packages (from rich<14,>=10.14.0->streamlit) (2.18.0)\n",
+            "Requirement already satisfied: smmap<6,>=3.0.1 in /usr/local/lib/python3.11/dist-packages (from gitdb<5,>=4.0.1->gitpython!=3.1.19,<4,>=3.0.7->streamlit) (5.0.2)\n",
+            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.11/dist-packages (from jinja2->altair<6,>=4.0->streamlit) (3.0.2)\n",
+            "Requirement already satisfied: attrs>=22.2.0 in /usr/local/lib/python3.11/dist-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (25.1.0)\n",
+            "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in /usr/local/lib/python3.11/dist-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (2024.10.1)\n",
+            "Requirement already satisfied: referencing>=0.28.4 in /usr/local/lib/python3.11/dist-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (0.36.2)\n",
+            "Requirement already satisfied: rpds-py>=0.7.1 in /usr/local/lib/python3.11/dist-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (0.22.3)\n",
+            "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.11/dist-packages (from markdown-it-py>=2.2.0->rich<14,>=10.14.0->streamlit) (0.1.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas<3,>=1.4.0->streamlit) (1.17.0)\n",
+            "Requirement already satisfied: pyngrok in /usr/local/lib/python3.11/dist-packages (7.2.3)\n",
+            "Requirement already satisfied: PyYAML>=5.1 in /usr/local/lib/python3.11/dist-packages (from pyngrok) (6.0.2)\n"
           ]
         }
       ]
@@ -542,33 +580,141 @@
     {
       "cell_type": "code",
       "source": [
-        "!streamlit run /usr/local/lib/python3.11/dist-packages/colab_kernel_launcher.py"
+        "%%writefile app.py\n",
+        "import streamlit as st\n",
+        "\n",
+        "# Import your RAG pipeline and necessary modules\n",
+        "from langchain.embeddings import HuggingFaceEmbeddings\n",
+        "from langchain.vectorstores import FAISS\n",
+        "from langchain.chains import RetrievalQA\n",
+        "from langchain.llms import HuggingFacePipeline\n",
+        "from transformers import pipeline\n",
+        "\n",
+        "# Load the embeddings and vector database\n",
+        "@st.cache_resource\n",
+        "def load_vector_store():\n",
+        "    return FAISS.load_local(\"/content/legal_faiss\", HuggingFaceEmbeddings(model_name=\"nlpaueb/legal-bert-base-uncased\"),allow_dangerous_deserialization=True)\n",
+        "\n",
+        "vector_store = load_vector_store()\n",
+        "\n",
+        "# Load the language model\n",
+        "@st.cache_resource\n",
+        "def load_llm():\n",
+        "    llm_pipeline = pipeline(\"text2text-generation\", model=\"google/flan-t5-small\")\n",
+        "    return HuggingFacePipeline(pipeline=llm_pipeline)\n",
+        "\n",
+        "llm = load_llm()\n",
+        "\n",
+        "\n",
+        "# Create a RAG-based Q&A chain\n",
+        "qa_chain = RetrievalQA.from_chain_type(llm, retriever=vector_store.as_retriever())\n",
+        "\n",
+        "# Initialize the chatbot function\n",
+        "def chatbot(query):\n",
+        "    response = qa_chain.run(query)\n",
+        "    return response\n",
+        "\n",
+        "# Streamlit app interface\n",
+        "st.title(\"Legal Document Chatbot\")\n",
+        "st.write(\"Ask any legal question based on the uploaded documents.\")\n",
+        "\n",
+        "user_input = st.text_input(\"Enter your question:\")\n",
+        "\n",
+        "if user_input:\n",
+        "    response = chatbot(user_input)\n",
+        "    st.write(\"Answer:\", response)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "88o6KiCYYRdH",
-        "outputId": "697c417d-0fc3-4d66-dbb4-7436e65c9e62"
+        "outputId": "4b4f3d08-7e75-4b3e-f135-cce86edee723"
       },
-      "execution_count": 24,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n",
-            "Collecting usage statistics. To deactivate, set browser.gatherUsageStats to false.\n",
-            "\u001b[0m\n",
-            "\u001b[0m\n",
-            "\u001b[34m\u001b[1m  You can now view your Streamlit app in your browser.\u001b[0m\n",
-            "\u001b[0m\n",
-            "\u001b[34m  Local URL: \u001b[0m\u001b[1mhttp://localhost:8501\u001b[0m\n",
-            "\u001b[34m  Network URL: \u001b[0m\u001b[1mhttp://172.28.0.12:8501\u001b[0m\n",
-            "\u001b[34m  External URL: \u001b[0m\u001b[1mhttp://34.125.50.110:8501\u001b[0m\n",
-            "\u001b[0m\n",
-            "\u001b[34m  Stopping...\u001b[0m\n",
-            "^C\n"
+            "Overwriting app.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import userdata\n",
+        "NGROK_TOKEN = userdata.get('NGROK_TOKEN')"
+      ],
+      "metadata": {
+        "id": "7wAh52Wfe2T4"
+      },
+      "execution_count": 70,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Authenticate ngrok with your token\n",
+        "!ngrok authtoken $NGROK_TOKEN"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IPxUbveveqtn",
+        "outputId": "f3644104-51ee-401d-9e4a-0933d7950bd0"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Authtoken saved to configuration file: /root/.config/ngrok/ngrok.yml\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!streamlit run app.py &>/dev/null &"
+      ],
+      "metadata": {
+        "id": "blBOuXiAYWoL"
+      },
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyngrok import ngrok\n",
+        "\n",
+        "# Kill existing tunnels if re-running\n",
+        "ngrok.kill()\n",
+        "\n",
+        "# Open a new tunnel using http://localhost:8501\n",
+        "public_url = ngrok.connect(\"8501\", \"http\", bind_tls=True)\n",
+        "print(f\"Streamlit app is running at: {public_url}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rY9xU_6ZdBg1",
+        "outputId": "eff9d51d-67a0-427c-d5ab-141c654364d7"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Streamlit app is running at: NgrokTunnel: \"https://94bb-34-125-50-110.ngrok-free.app\" -> \"http://localhost:8501\"\n"
           ]
         }
       ]
@@ -577,9 +723,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "blBOuXiAYWoL"
+        "id": "VPEY7OzCdGtR"
       },
-      "execution_count": null,
+      "execution_count": 73,
       "outputs": []
     }
   ]
